--- a/css/styles.css
+++ b/css/styles.css
@@ -63,9 +63,14 @@ header {
 }
 
 nav {
-  width: 100;
+  width: 100%;
+  min-height: 60px;
   background-color: #252831;
   text-align: center;
+  padding: 5px 10px;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 nav h1 {
   margin: auto;
