--- a/css/styles.css
+++ b/css/styles.css
@@ -63,24 +63,21 @@ header {
 }
 
 nav {
-  width: 100%;
-  min-height: 60px;
-  background-color: #252831;
-  text-align: center;
-  padding: 5px 10px;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+    width: 100%;
+    height: 70px;
+    background-color: #252831;
+    text-align: center;
+    display: flex;
 }
 nav h1 {
   margin: auto;
 }
 nav h1 a {
-  color: #fff;
-  font-size: 0.85em;
-  font-weight: 200;
-  letter-spacing: 10px;
-  text-transform: uppercase;
+    color: #fff;
+    font-size: 14pt;
+    font-weight: 200;
+    letter-spacing: 10px;
+    text-transform: uppercase;
 }
 .skip-link {
   position: absolute;
