--- a/css/styles.css
+++ b/css/styles.css
@@ -58,26 +58,22 @@ textarea {
   position: static;
 }
 /* ====================== Navigation Header ====================== */
-header {
-  width: 100%;
-}
-
 nav {
-    width: 100%;
-    height: 70px;
-    background-color: #252831;
-    text-align: center;
-    display: flex;
+	width: 100%;
+	height: 80px;
+	background-color: #252831;
+	text-align:center;
 }
 nav h1 {
-  margin: auto;
+	margin: auto;
+	padding: 0.4em 0;
 }
 nav h1 a {
-    color: #fff;
-    font-size: 14pt;
-    font-weight: 200;
-    letter-spacing: 10px;
-    text-transform: uppercase;
+	color: #fff;
+	font-size: 1em;
+	font-weight: 200;
+	letter-spacing: 10px;
+	text-transform: uppercase;
 }
 .skip-link {
   position: absolute;
